--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   --background-color: #ffffff;
   --text-color: #1a1a1a;
   --primary-color: #0a66c2;
-  --accent-color: #ff6b6b;
+  --accent-color: rgb(0, 4, 71);
   --other-color: rgb(250, 250, 250);
   --text-color_hover: rgb(45, 45, 45);
   --form-color: rgba(230, 230, 230, 0.25);
@@ -15,7 +15,7 @@ html.dark {
   --background-color: rgb(20, 20, 20);
   --text-color: #f5f5f5;
   --primary-color: #0a66c2;
-  --accent-color: #ff6b6b;
+  --accent-color: rgb(25, 36, 255);
   --other-color: rgb(25, 25, 25);
   --text-color_hover: rgb(230, 230, 230);
   --form-color: rgba(25, 25, 25, 0.250);
@@ -46,7 +46,7 @@ body > * {
     align-items: center;
     padding: 1rem 2rem;
     flex-wrap: wrap;
-    border-bottom: 2px solid var(--text-color);
+    border-bottom: 2px solid var(--accent-color);
     gap: 0.3rem;
 }
 
@@ -104,14 +104,15 @@ body > * {
 }
 
 .menu-toggle-links {
+    text-align: center;
     position: absolute;
-    padding-bottom: 15px;
+    padding: 1rem 0;
     top: calc(100% + 12px);
     right: -35px;
     background: #cbcbcb9e;
     border-radius: 15px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    min-width: 270px;
+    min-width: 200px;
     opacity: 0;
     visibility: hidden;
     transform: translateY(-10px);
@@ -119,18 +120,6 @@ body > * {
     z-index: 1000;
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
-}
-
-.menu-toggle-links .links-home {
-    display: flex;
-    width: 2.5rem;
-    margin: 25px 0 15px;
-    border-left: none;
-    position: relative;
-    left: 26px;
-    justify-content: center;
-    overflow: hidden;
-    transform: translateX(100%);
 }
 
 .menu-toggle-container:hover .menu-toggle-links,
@@ -150,8 +139,8 @@ body > * {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
-    padding: 12px 16px;
+    gap: 5px;
+    padding: 0.5rem 16px;
     color: var(--text-color);
     text-decoration: none;
     transition: background-color 0.2s ease;;
@@ -166,7 +155,7 @@ body > * {
 }
 
 .toggle-item:hover {
-    color: orange;
+    color: rgba(25, 36, 255, 0.838);
 }
 
 .toggle-item i {
@@ -189,4 +178,41 @@ body > * {
     backdrop-filter: blur(10px);
 }
 
+/* Bouton de réservation */
+.btn_reservez {
+    background-color: rgba(25, 36, 255, 0.838);
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.btn_reservez:hover {
+    background-color: rgb(25, 36, 255);
+}
+
+.btn_reservez a {
+    color: white;
+    text-decoration: none;
+}
+
+.menu-toggle_btn_reservez {
+    margin: 0.8rem 0 0.5rem;
+}
+
 /* Main */
+section {
+    width: clamp(630px, 100vw, 630px);
+    margin: auto;
+    padding: 1rem 2rem;
+}
+
+/* Footer */
+.footer {
+    width: clamp(630px, 100vw, 630px);
+    margin: auto;
+    padding: 1rem 2rem;
+    text-align: center;
+    border-top: 2px solid var(--accent-color);
+}
