--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   --text-color: #1a1a1a;
   --primary-color: #0a66c2;
   --accent-color: rgb(0, 4, 71);
-  --other-color: rgb(250, 250, 250);
+  --other-color: rgba(215, 219, 255, 0.784);
   --text-color_hover: rgb(45, 45, 45);
   --form-color: rgba(230, 230, 230, 0.25);
   --font-main: 'Poppins', sans-serif;
@@ -44,7 +44,7 @@ body > * {
     margin: auto;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 0.5rem 2rem;
     flex-wrap: wrap;
     border-bottom: 2px solid var(--accent-color);
     gap: 0.3rem;
@@ -56,24 +56,13 @@ body > * {
 
 .logo a {
     display: flex;
-    flex-direction: column; 
     align-items: flex-start;
     text-decoration: none;
-    color: var(--primary-color);
 }
 
-.logo-easy {
-  color: #0a3570;
-  font-weight: 800;
-  font-size: 1.5rem;
-  line-height: 1.1;
-}
-
-.logo-market {
-  color: #2196f3;
-  font-weight: 400;
-  font-size: 1rem;
-  line-height: 1.1;
+.img_logo {
+    display: flex;
+    width: 125px;
 }
 
 .menu-toggle-container {
@@ -82,7 +71,7 @@ body > * {
 }
 
 .menu-toggle {
-    background-color: rgba(227, 227, 227, 0.427);
+    background-color: var(--other-color);
     width: 26px;
     height: 26px;
     border-radius: 50%;
@@ -109,7 +98,7 @@ body > * {
     padding: 1rem 0;
     top: calc(100% + 12px);
     right: -35px;
-    background: #cbcbcb9e;
+    background: var(--other-color);
     border-radius: 15px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     min-width: 200px;
@@ -118,8 +107,8 @@ body > * {
     transform: translateY(-10px);
     transition: all 0.3s ease;
     z-index: 1000;
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px);
 }
 
 .menu-toggle-container:hover .menu-toggle-links,
@@ -173,7 +162,7 @@ body > * {
     height: 0;
     border-left: 8px solid transparent;
     border-right: 8px solid transparent;
-    border-bottom: 14px solid #1643a49e;
+    border-bottom: 14px solid var(--other-color);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
 }
