--- a/css/reservation.css
+++ b/css/reservation.css
@@ -13,13 +13,14 @@
     display: flex;
     align-items: center;
     gap: 1rem;
-    margin-left: 2rem;
+    margin-left: 2.5rem;
     margin-bottom: 0.5rem;
 }
 
 .ajouter_produit {
     display: flex;
     position: absolute;
+    top: 97.8px;
     width: 25px;
 }
 
