--- a/css/tableau_de_bord.css
+++ b/css/tableau_de_bord.css
@@ -1,3 +1,10 @@
+/* Tableau de bord CSS */
+.suivi_reservation,
+.suivi_commission {
+    position: relative;
+    bottom: 1.5rem;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
