--- a/css/connexion.css
+++ b/css/connexion.css
@@ -46,7 +46,7 @@
 }
 
 .mot_de_passe_oublie:hover {
-    color: var(--accent-color);
+    color: rgba(25, 36, 255, 0.950);
 }
 
 .btn_creation_compte {
@@ -62,6 +62,7 @@
  }
 
 .btn_creation_compte:hover {
+    background-color: rgba(230, 232, 255, 0.7);
     border: 2px solid rgb(25, 36, 255);
  }
 
