--- a/css/reservation.css
+++ b/css/reservation.css
@@ -30,7 +30,7 @@
     width: 100%;
     background-color: rgba(25, 36, 255, 0.950);
     color: white;
-    margin: 1rem auto;
+    margin: 1rem auto 0.5rem;
     padding: 0.5rem;
     justify-content: center;
     border: none;
