--- a/css/changer_mot_de_passe.css
+++ b/css/changer_mot_de_passe.css
@@ -21,24 +21,13 @@
 }
 
 .btn_envoyer {
-    padding: 0;
+    padding: 0.5rem;
     margin-bottom: 1.5rem;
     background-color: rgba(25, 36, 255, 0.950);
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-}
-
-.btn_envoyer a {
-    display: flex;
-    color: white;
-    text-decoration: none;
-    width: 100%;
-    padding: 0.5rem 0;
-    margin: 0;
-    border-radius: 4px;
-    justify-content: center;
 }
 
 .btn_envoyer:hover {
