--- a/css/connexion.css
+++ b/css/connexion.css
@@ -1,5 +1,6 @@
 .connexion_section {
     padding: 20px;
+    max-width: 300px;
 }
 
 .connexion_section h2 {
@@ -10,7 +11,6 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    max-width: 300px;
     margin: auto;
 }
 
@@ -49,14 +49,17 @@
 }
 
 .btn_creation_compte {
+    display: flex;
     background-color: transparent;
-    margin: 0.5rem 0 3rem;
+    margin: 0.5rem auto 3rem;
     padding: 0.5rem;
+    width: 100%;
     position: relative;
     top: 1rem;
     border: 2px solid rgba(25, 36, 255, 0.950);
     border-radius: 8px;
     cursor: pointer;
+    justify-content: center;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
