--- a/css/form.css
+++ b/css/form.css
@@ -1,19 +1,21 @@
+.section_form {
+    max-width: 300px;
+}
 
-
-.connexion_form {
+.form {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     margin: auto;
 }
 
-.connexion_form input {
+.form input {
     padding: 0.5rem;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
-.btn_connexion_submit {
+.btn_submit {
     padding: 0.5rem;
     background-color: rgba(25, 36, 255, 0.950);
     color: white;
@@ -22,46 +24,6 @@
     cursor: pointer;
 }
 
-.btn_connexion_submit:hover {
+.btn_submit:hover {
     background-color: rgb(25, 36, 255);
-}
-
-.mot_de_passe_oublie {
-    text-decoration: none;
-    color: var(--text-color);
-    text-align: center;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    position: relative;
-    bottom: 1rem;
-    transition: color 0.3s ease;
-}
-
-.mot_de_passe_oublie:hover {
-    text-decoration: underline;
-}
-
-.btn_creation_compte {
-    display: flex;
-    background-color: transparent;
-    margin: 0.5rem auto 3rem;
-    padding: 0.5rem;
-    width: 100%;
-    position: relative;
-    top: 1rem;
-    border: 2px solid rgba(25, 36, 255, 0.950);
-    border-radius: 8px;
-    cursor: pointer;
-    justify-content: center;
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.btn_creation_compte:hover {
-    background-color: rgba(230, 232, 255, 0.7);
-    border: 2px solid rgb(25, 36, 255);
-}
-
-.btn_creation_compte .creation_compte {
-    color: var(--text-color);
-    text-decoration: none;
 }
