--- a/css/reservation.css
+++ b/css/reservation.css
@@ -1,44 +1,39 @@
 /* Reservation CSS */
-.reservation {
-    position: relative;
-    bottom: 1.5rem;
+.reservation label {
+    display: block;
+    margin-bottom: 0.5rem;
 }
 
-.mon_identite {
+.mes_reservations {
     display: flex;
-    align-items: center;
-    gap: 1rem;
+    margin-top: 10px;
+    gap: 0.5rem;
 }
 
 .produit-group {
     display: flex;
     align-items: center;
     gap: 1rem;
-    margin-left: 2.5rem;
     margin-bottom: 0.5rem;
+    justify-content: center;
+}
+
+.produit-group input {
+    width: 125px;
 }
 
 .ajouter_produit {
-    display: flex;
-    position: absolute;
-    top: 96.7px;
     width: 25px;
+    position: relative;
+    bottom: 4px;
 }
 
-.btn_submit {
-    display: flex;
-    width: 100%;
-    background-color: rgba(25, 36, 255, 0.950);
-    color: white;
-    margin: 1rem auto 0.5rem;
+select {
     padding: 0.5rem;
-    justify-content: center;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s ease, color 0.3s ease;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
 
-.btn_submit:hover {
-    background-color: rgb(25, 36, 255);
+.btn_reservation_submit {
+    margin: 1rem 0 2rem;
 }
