--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ body > * {
     top: calc(100% + 12px);
     right: -35px;
     background: var(--other-color);
-    border-radius: 15px;
+    border-radius: 12px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     min-width: 200px;
     opacity: 0;
@@ -184,7 +184,7 @@ body > * {
     color: white;
     padding: 0.5rem 1rem;
     border: none;
-    border-radius: 8px;
+    border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
@@ -208,7 +208,7 @@ body > * {
     margin: 0.5rem 0;
     padding: 0.5rem 2.5rem;
     border: 2px solid rgba(25, 36, 255, 0.950);
-    border-radius: 8px;
+    border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
@@ -219,18 +219,14 @@ body > * {
 }
 
 /* Main */
-section {
+.section {
     width: clamp(630px, 100vw, 630px);
     margin: auto;
-    padding: 1rem 2rem;
+    padding: 0.5rem 2rem;
 }
 
-.connexion_section {
-    padding: 20px;
-    max-width: 300px;
-}
-
-.connexion_section h2 {
+.section h2 {
+    font-size: 1.3rem;
     text-align: center;
 }
 
