--- a/css/form.css
+++ b/css/form.css
@@ -22,8 +22,21 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .btn_submit:hover {
     background-color: rgb(25, 36, 255);
+}
+
+.page_suivante {
+    display: flex;
+    color: var(--text-color);
+    text-decoration: none;
+    margin-bottom: 1.5rem;
+    justify-content: center;
+}
+
+.page_suivante:hover {
+    text-decoration: underline;
 }
